uniformize postdoc affiliations, make sure phd students don't get cut off at bottom of columns

--- a/css/group.scss
+++ b/css/group.scss
@@ -125,7 +125,7 @@ section {
 
 .person {
 
-    margin-bottom: 10px;
+    margin-bottom: 27px;
 
     .profile {
         height: 70px;
